--- a/fishing-gear-store/frontend/src/components/productCard/productCard.css
+++ b/fishing-gear-store/frontend/src/components/productCard/productCard.css
@@ -3,9 +3,14 @@
   border: 1px solid #ddd;
   border-radius: 10px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .card-img-top {
+  height: 350px;
+  object-fit: cover;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
 }
@@ -17,12 +22,23 @@
 
 .card-text {
   font-size: 1rem;
+  font-weight: 600;
 }
 
 .card-body {
+  flex-grow: 1;
   padding: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .card-body .btn {
   width: 100%;
+  margin: auto;
+}
+
+a {
+  text-decoration: none;
+  color: black;
 }
